prod/k8s/storm/k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storm
  namespace: storm
  labels:
    app.kubernetes.io/name: storm
    app.kubernetes.io/project: storm
    app.kubernetes.io/env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: storm
      app.kubernetes.io/project: storm
      app.kubernetes.io/env: prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: storm
        app.kubernetes.io/project: storm
        app.kubernetes.io/env: prod
    spec:
      containers:
        - name: storm
          image: storm:latest
          ports:
            - containerPort: 50051
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "2"
          securityContext:
            runAsUser: 1000
            fsGroup: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: storm-service
  namespace: storm
spec:
  selector:
    app.kubernetes.io/name: storm
    app.kubernetes.io/project: storm
    app.kubernetes.io/env: prod
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 50051
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: storm-ingress
  namespace: storm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`storm.zirakcloud.ir`)
      kind: Rule
      services:
        - name: storm-service
          namespace: storm
          scheme: h2c
          passHostHeader: true
          port: 8088
      middlewares:
        - name: grpc-redirect
  tls:
    certResolver: "le-staging"
    secretName: storm-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: storm-https-redirect
  namespace: storm
spec:
  redirectScheme:
    scheme: https
    permanent: true
