prod/k8s/storm/storm.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storm
  namespace: storm
  labels:
    app.kubernetes.io/name: storm
    app.kubernetes.io/part-of: storm
    app.kubernetes.io/env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: storm
      app.kubernetes.io/part-of: storm
      app.kubernetes.io/env: prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: storm
        app.kubernetes.io/part-of: storm
        app.kubernetes.io/env: prod
    spec:
      containers:
        - name: storm
          image: storm:latest
          ports:
            - containerPort: 50051
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "2"
          securityContext:
            runAsUser: 1000
            fsGroup: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: storm-service
  namespace: storm
spec:
  selector:
    app.kubernetes.io/name: storm
    app.kubernetes.io/part-of: storm
    app.kubernetes.io/env: prod
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 50051
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: "le-prod"
  name: storm-ingress
  namespace: storm
spec:
  ingressClassName: nginx
  rules:
  - host: "storm.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storm-service
            port:
              number: 8088
  tls:
    - secretName: storm-tls 
      hosts:
        - "storm.domain.tld"
